k8s/service-exam.yaml
apiVersion: v1
kind: Service
metadata:
  name: exam-service
spec:
  type: ClusterIP
  selector:
    app: exam
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
