k8s/service-math.yaml
apiVersion: v1
kind: Service
metadata:
  name: math-service
spec:
  type: ClusterIP
  selector:
    app: math
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
