k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
          - path: /exam-api
            pathType: Prefix
            backend:
              service:
                name: exam-service
                port:
                  number: 8081
